--- a/index.html
+++ b/index.html
@@ -4,11 +4,36 @@
 <head>
     <meta charset="UTF-8">
     <title>Rock Paper Scissors</title>
-    <script src="./script.js"></script>
+    <link rel="stylesheet" href="./style.css">
+    <script src="./script.js" defer></script>
 </head>
 
 <body>
-
+    <div class="title">WELCOME TO ROCK PAPER SCISSORS</div>
+    <div class="container">
+        <h2>The first to win 5 rounds wins the game</h2>
+        <div class="mid">
+            <div class="player-choice">
+                <img class="player">
+                <p class="player-score">Player score: 0</p>
+            </div>
+            <div class="result"></div>
+            <div class="computer-choice">
+                <img class="comp">
+                <p class="computer-score">Computer score: 0</p>
+            </div>
+        </div>
+        <h2>Choose your weapon</h2>
+        <div class="bot">
+            <button class="choice"><img src="./imgs/rock.svg" class="rock"></button>
+            <button class="choice"><img src="./imgs/paper.svg" class="paper"></button>
+            <button class="choice"><img src="./imgs/scissors.svg" class="scissors"> </button>
+        </div>
+    </div>
+    <div class="finish hidden">
+        <p class="announce"></p>
+        <button class="refresh hidden">Restart</button>
+    </div>
 </body>
 
 </html>
